--- a/ui/resource.qrc
+++ b/ui/resource.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>qml/CutConfiguration.qml</file>
         <file>qml/main.qml</file>
         <file>qml/Settings.qml</file>
         <file>qml/SystemStatus.qml</file>
+        <file>qml/Info.qml</file>
+        <file>qml/Setup.qml</file>
     </qresource>
 </RCC>
